# darkmoon

./: .dockerignore  .gitignore  .gitlab-ci.yml  .hintrc  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TEMPLATE.env  darkmoon.code-workspace  darkmoon.env  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: documentation.md
.github/workflows/: ci.yaml  push-main.yml
darkmoon/: .env  .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Jinja.py  Makefile  TEMPLATE.env  app.py  index.html  main.py  new.txt  poetry.toml  pyproject.toml  settings.py  style.css  vm_utils.py
darkmoon-cli/: .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  pyproject.toml
darkmoon-cli/src/darkmoon_cli/: main.py  metadata_draft.txt  settings.py
darkmoon-cli/src/darkmoon_cli/testing/: Company Research.pptx  Questions for Meeting.docx
darkmoon-cli/tests/: test_main.py
darkmoon/api/backend/: endpoint.py
darkmoon/api/static/: hash.css  homepage.css  style.css  styles.css  upload.css  variables.css
darkmoon/api/templates/: about.html  credit.html  extract.html  hash.html  hash_compare_result.html  hashdata.html  index.html  results.html  test3.json  test4.json  upload.html
darkmoon/api/v1/jinja/: views.py
darkmoon/api/v1/jinja/templates/: index.html
darkmoon/api/v1/metadata/: Exception_Response.py  schema.py  views.py
darkmoon/cli/: main.py  utils.py
darkmoon/common/: main.py  name.py  schema.py  utils.py
darkmoon/core/: README.md  __init__.py  database.py  schema.py
darkmoon/darkmoon/: app.py
darkmoon/darkmoon/api/v1/metadata/: views.py
darkmoon/darkmoon/core/: __init__.py  database.py
darkmoon/src/darkmoon/: __init__.py  main.py  settings.py
darkmoon/src/darkmoon/server/: database.py  schema.py
darkmoon/tests/unit/: test_app.py
server/: .gitignore  .gitlab-ci.yml  Makefile  TEMPLATE.env  requirements.txt
server/darkmoon/: settings.py
server/darkmoon/api/v1/metadata/: views.py
server/darkmoon/core/: database.py
templates/: darkmoon.gitlab-ci.yml
tests/integration/api/: Test Name  __init__.py  bad.vmdk  conftest.py  test.vmdk  test3.rtf  test_api.py  test_jinja.py
tests/unit/: conftest.py  test_cli.py  test_metadata.py  test_nothing.py
tests/unit/api/: conftest.py  test_api.py
tests/unit/cli/: conftest.py  test_cli.py
