[tool.poetry]
authors = ["Obscurity Labs"]
description = "Project DarkMoon - CLI tool"
license = "Proprietary"
name = "darkmoon"
readme = "README.md"
version = "0.0.2"

[tool.poetry.scripts]
darkmoon = "darkmoon.cli.main:app"

[tool.poetry.dependencies]
beanie = "^1.19.2"
fastapi = "^0.95.0"
httpx = "^0.24.1"
jinja2 = "^3.1.2"
motor = "^3.0.0"
pefile = "^2023.2.7"
pydantic = "1.10.11"
pytest = "^7.4.0"
python = "^3.10"
python-magic = "^0.4.27"
python-multipart = "^0.0.6"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
types-requests = "^2.27.13"
uvicorn = {extras = ["standard"], version = "^0.23.1"}

[tool.poetry.group.dev.dependencies]
asgi-lifespan = "^2.1.0"
black = "23.7.0"
commitizen = "3.5.3"
faker = "^19.1.0"
motor-types = "^1.0.0b2"
mypy = "1.4.1"
pre-commit = "^3.3.3"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
ruff = "0.0.278"
schemathesis = "^3.19.5"
testcontainers = "^3.7.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
addopts = "-q --cov=darkmoon --no-cov-on-fail"
filterwarnings = ["ignore::DeprecationWarning", "ignore::RuntimeWarning"]
markers = ["unit", "integration"]

[tool.coverage.run]
branch = true
omit = ["**/tests/**"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
fail_under = 80
show_missing = true
skip_covered = true

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
no_warn_unused_ignores = true
plugins = ["pydantic.mypy"]
strict = true
strict_optional = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | static
    | docs
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
target_versions = ['py310']

[tool.ruff]
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "setup.py",
  "docs",
  "scripts",
]
ignore = [
  "B008",
  "B904",
  "B905",
  "D100",
  "D104",
  "D107",
  "D301",
  "S106",
  "S113",
  "S603",
  "ERA001",
]
select = ["E", "F", "S", "B", "COM", "D", "C4", "ERA", "DTZ", "I", "T20", "UP"]
target-version = "py310"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Header",
  "fastapi.Path",
  "Depends",
  "fastapi.params.Depends",
  "Query",
  "Body",
  "Header",
  "typer.Option",
  "settings",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["D417", "S101"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = false
