[tool.poetry]
name = "darkmoon"
version = "0.0.2"
authors = ["Obscurity Labs"]
description = "Project DarkMoon - CLI tool"
readme = "README.md"
license = "Proprietary"

[tool.poetry.scripts]
darkmoon = "darkmoon.cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
types-requests = "^2.27.13"
requests = "^2.31.0"
motor = "^3.0.0"
httpx = "^0.24.1"
pydantic = "1.10.11"
pefile = "^2023.2.7"
uvicorn = { extras = ["standard"], version = "^0.23.1" }
beanie = "^1.19.2"
typer = { extras = ["all"], version = "^0.9.0" }
proxmoxer = "^2.0.1"
jinja2 = "^3.1.2"
pytest = "^7.4.0"
python-multipart = "^0.0.6"
python-magic = "^0.4.27"
aiohttp = "^3.8.5"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
commitizen = "3.6.0"
mypy = "1.5.0"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"
ruff = "0.0.278"
motor-types = "^1.0.0b2"
asgi-lifespan = "^2.1.0"
pytest-asyncio = "^0.21.0"
faker = "^20.0.3"
testcontainers = "^3.7.1"
schemathesis = "^3.19.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-q --cov=darkmoon --no-cov-on-fail"
filterwarnings = ["ignore::DeprecationWarning", "ignore::RuntimeWarning"]
markers = ["unit", "integration"]

[tool.coverage.run]
branch = true
omit = ["**/tests/**"]

[tool.coverage.report]
fail_under = 75
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
show_missing = true
skip_covered = true

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
no_warn_unused_ignores = true
strict = true
strict_optional = false
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | static
    | docs
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
target_versions = ['py310']

[tool.ruff]
select = ["E", "F", "S", "B", "COM", "D", "C4", "ERA", "DTZ", "I", "T20", "UP"]
ignore = [
  "B008",
  "B904",
  "B905",
  "D100",
  "D104",
  "D107",
  "D301",
  "S106",
  "S113",
  "S603",
  "ERA001",
]
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "setup.py",
  "docs",
  "scripts",
]
target-version = "py310"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Header",
  "fastapi.Path",
  "Depends",
  "fastapi.params.Depends",
  "Query",
  "Body",
  "Header",
  "typer.Option",
  "settings",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["D417", "S101"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
force-wrap-aliases = false
combine-as-imports = true
