# Copyright (C) 2022 Obscurity Labs LLC. <admin@obscuritylabs.com> - All Rights Reserved
# Unauthorized copying of this file, via any medium is strictly prohibited.
# All rights reserved. No warranty, explicit or implicit, provided.
# Proprietary and confidential.

[tool.poetry]
authors = ["Obscurity Labs"]
description = "Project DarkMoon - Web API service"
name = "darkmoon"
version = "0.0.1"

[tool.poetry.scripts]
darkmoon = "darkmoon.main:cli_app"

[tool.poetry.dependencies]
MarkupSafe = "2.0.0"
aenum = "^3.1.11"
asyncio = "^3.4.3"
fastapi = {version = "^0.95.0", extras = ["all"]}
fastapi-mail = "^0.4.1"
loguru = "^0.5.3"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
pydantic-jsonapi = "^0.11.0"
pyjwkest = "^1.4.2"
python = "^3.10"
python-dotenv = "^0.15.0"
python-slugify = "^4.0.1"
typer = {version = "^0.4.1", extras = ["all"]}
types-requests = "^2.27.13"
motor = "^3.0.0"

[tool.poetry.dev-dependencies]
Faker = "^13.3.2"
asgi-lifespan = "^1.0.1"
black = "^22.6.0"
commitizen = "^2.20.4"
mkdocs = "^1.2.3"
mkdocs-awesome-pages-plugin = "^2.7.0"
mkdocs-material = "^8.2.5"
mkdocs-minify-plugin = "^0.5.0"
mkdocstrings = "^0.18.1"
mypy = "^0.961"
nest-asyncio = "^1.5.4"
pre-commit = "^2.17.0"
pydantic-to-typescript = "^1.0.6"
pytest = "^7.1.2"
pytest-cov = "^2.11.1"
pyupgrade = "^2.31.1"
ruff = "^0.0.231"
types-PyYAML = "^6.0.5"
types-requests = "^2.27.14"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-q"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::RuntimeWarning",
]
markers = [
  "unit",
  "integration",
]
testpaths = [
  "tests",
]

[tool.coverage.run]
branch = true
omit = [
  "**/tests/**",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]
fail_under = 60
show_missing = true
skip_covered = true

[tool.mypy]
allow_redefinition = true
ignore_missing_imports = true
no_warn_unused_ignores = true
strict = true
strict_optional = false

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | static
    | docs
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 120
target_versions = ['py310']

[tool.ruff]
select = ["E", "F", "S", "B", "COM", "D", "C4", "ERA", "DTZ", "I"]
ignore = [
  "B008",
  "B904",
  "B905",
  "D100",
  "D104",
  "D107",
  "D301",
  "S106",
  "S113",
  "ERA001",
]
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
  "setup.py",
  "docs",
  "scripts",
]
line-length = 120
target-version = "py310"

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Header",
  "fastapi.Path",
  "Depends",
  "fastapi.params.Depends",
  "Query",
  "Body",
  "Header",
  "typer.Option",
  "settings",
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["D417", "S101"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
force-wrap-aliases = false
combine-as-imports = true
